<resources>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="app_name">陌陌</string>
    <string name="market_source">1</string>
    <string name="cropimage">陌陌裁图</string>
    <string name="filterimage">图片滤镜</string>
    <string name="header_choose">筛选</string>
    <string name="loadmore">获取更多</string>
    <string name="nearby">附近</string>
    <string name="roam">地点漫游</string>
    <string name="nearby_group">附近群组</string>
    <string name="nearby_hide">附近 (隐身)</string>
    <string name="sessions">消息</string>
    <string name="setting">系统设置</string>
    <string name="changepwd">修改密码</string>
    <string name="site">地点</string>
    <string name="gender_sort_male">男</string>
    <string name="gender_sort_female">女</string>
    <string name="gender_male">男性</string>
    <string name="gender_female">女性</string>
    <string name="frienddiscover">好友出没</string>
    <string name="quit">撤销</string>
    <string name="delete">删除</string>
    <string name="emotestore">表情商城</string>
    <string name="mineemotestore">我的表情</string>
    <string name="emotioncategory">表情分类</string>
    <string name="sitetype_hote">周边热门</string>
    <string name="sitetype_fav">我的收藏</string>
    <string name="back">返回</string>
    <string name="next">下一步</string>
    <string name="login">登录</string>
    <string name="update">修改</string>
    <string name="press">请稍候，正在提交...</string>
    <string name="downloading">请稍候，正在获取数据...</string>
    <string name="imagebrower_title">图片浏览</string>
    <string name="imagebrower_save">正在将图片保存到本地...</string>
    <string name="imagebrower_save_success">图片成功保存到存储卡</string>
    <string name="imagebrower_save_failed">图片保存失败</string>
    <string name="imagebrower_save_failed_sdcard">存储卡不可用，图片保存失败</string>
    <string name="audiorecod_note_scroll">上滑取消</string>
    <string name="audiorecod_note_cancel">松开取消</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新...</string>
    <string name="pull_to_refresh_locate_label">正在定位...</string>
    <string name="pull_to_refresh_lastTime">最后刷新时间</string>
    <string name="getting_loation">请稍候，正在获取位置...</string>
    <string name="dialog_btn_confim">确认</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_title_alert">提示</string>
    <string name="dialog_msg_welcome">欢迎使用陌陌交友软件，祝您使用愉快！</string>
    <string name="post">提交</string>
    <string name="newversion_share">给好友分享陌陌新版本介绍</string>
    <string name="newversion_share_title">升级分享</string>
    <string name="friend_header_title">好友</string>
    <string name="blacklist_header_title">黑名单</string>
    <string name="groupmember_list_header_title">成员列表(%1$s)</string>
    <string name="groupfriends_list_header_title">参加活动好友列表(%1$s)</string>
    <string name="header_order">排序</string>
    <string name="header_audio_type">语音收听方式</string>
    <string name="header_add_friend">添加</string>
    <string name="header_title_add_friend">添加好友</string>
    <string name="friends_order_alter_titile">好友排序</string>
    <string name="fans_order_alter_titile">好友排序</string>
    <string name="find_empty_momoid">陌陌号码不能为空</string>
    <string name="find_empty_gid">群组号码不能为空</string>
    <string name="find_your_momoid">这是你的陌陌号</string>
    <string name="find_no_momoid">你输入的陌陌号不存在</string>
    <string name="find_no_gid">你输入的群组号不存在</string>
    <string name="relation_stanger">陌生人</string>
    <string name="relation_follow">关注</string>
    <string name="relation_fans">粉丝</string>
    <string name="relation_both">好友</string>
    <string name="relation_group">群组</string>
    <string name="relation_discuss">多人对话</string>
    <string name="relation_str">关系</string>
    <string name="relation_contacts">联系人</string>
    <string name="relation_addcontacts">添加联系人</string>
    <string name="relation_addgroupfriend">添加好友/群组</string>
    <string name="relation_addcontact">添加通讯录好友</string>
    <string name="relation_addsina">添加新浪微博好友</string>
    <string name="relation_addrenren">添加人人网好友</string>
    <string name="relation_addwx">添加微信好友</string>
    <string name="relation_addqq">添加QQ好友</string>
    <string name="relation_addtx">添加腾讯微博好友</string>
    <string name="relation_addsns">添加第三方好友</string>
    <string name="relation_addgroup">创建地点群组</string>
    <string name="relation_adddiscuss">创建多人对话</string>
    <string name="report_block_dialog_title">举报/拉黑</string>
    <string name="report_dialog_title">举报该用户</string>
    <string name="report_dialog_title_group">举报该群</string>
    <string name="report_dialog_title_feed">举报留言</string>
    <string name="report_dialog_title_comment">举报评论</string>
    <string name="report_result_success">举报成功</string>
    <string name="report_result_failed">举报失败</string>
    <string name="dialog_title_editprofile_name">修改名字</string>
    <string name="dialog_title_editprofile_sign">修改个人签名</string>
    <string name="dialog_title_editprofile_interest">修改爱好和特点</string>
    <string name="dialog_title_editprofile_job">修改职业</string>
    <string name="dialog_title_editprofile_company">修改公司</string>
    <string name="dialog_title_editprofile_school">修改学校</string>
    <string name="dialog_title_editprofile_hangout">修改常出没的地方</string>
    <string name="dialog_title_editprofile_website">修改个人主页</string>
    <string name="dialog_editprofile_name_empty">名字不能为空</string>
    <string name="dialog_title_avatar_long_press">选择操作</string>
    <string name="dialog_title_add_photo">添加照片</string>
    <string name="dialog_title_add_pic">选择分享照片</string>
    <string name="dialog_title_change_bg">设置资料背景图</string>
    <string name="dialog_exit_editprofile_title">退出编辑个人资料</string>
    <string name="dialog_exit_editprofile_msg">你的个人资料已经修改，退出前要保存吗？</string>
    <string name="dialog_title_newchat_waring">使用须知</string>
    <string name="dialog_button_newchat_waring">我知道了</string>
    <string name="dialog_button_groupfeed_commend">我先说一句</string>
    <string name="dialog_button_groupfeed_cancle">我知道了</string>
    <string name="dialog_msg_newchat_waring_text_default">向陌生人打招呼时，请保持社交礼仪。发送不良信息、侮辱谩骂行为，如被举报核实，账号将被封禁。</string>
    <string name="dialog_msg_newchat_waring_deny_count">陌陌已处理%1$s万次举报，共封禁设备%2$s台</string>
    <string name="dialog_groupfeed_introtitle1">和群好友分享生活的点滴！</string>
    <string name="dialog_groupfeed_introtitle2">活动，聚会，生活趣事，联系方式，心得分享……</string>
    <string name="dialog_groupfeed_introtitle0">群空间使用说明</string>
    <string name="dialog_follow_tip">确认要关注对方吗？</string>
    <string name="dialog_unfollow_tip">确认要取消关注对方吗？</string>
    <string name="dialog_sub_cte_tip">退订包月会员将于次月生效，请勿重复操作。</string>
    <string name="user_profile_default_interest">填写你喜欢些什么，对什么特别有兴趣</string>
    <string name="user_profile_default_job">填写你的职业和所属行业</string>
    <string name="user_profile_default_industry">请选择你的行业</string>
    <string name="user_profile_default_company">请填写你所在的公司</string>
    <string name="user_profile_default_school">请填写你就读的学校</string>
    <string name="user_profile_default_hangout">填写你常出没的城市和街区</string>
    <string name="user_profile_default_website">填写更多的介绍，让大家认识你了解你</string>
    <string name="user_profile_edit_checkemail_tip">邮箱地址是登录陌陌和找回密码的凭证，绑定后可更好地保护你的账号</string>
    <string name="user_profile_edit_phone_tip">当前已绑定手机号，手机号可用于登录和找回密码。陌陌不会以任何途径泄露你的手机号。</string>
    <string name="user_profile_edit_phone_syn">启用通讯录功能，可以查找通讯录中使用陌陌的好友。通讯录好友也可查找到你，但在通过验证之前，无法查看你的陌陌资料。</string>
    <string name="user_profile_edit_avatar_tip">长按图片，可以设为头像或删除</string>
    <string name="user_vipprofile_edit_avatar_tip">点击编辑头像，会员可添加16张照片</string>
    <string name="user_profile_baned_tip">该用户因违反社区规定，已被封禁</string>
    <string name="user_profile_incomplete">当前资料不完整，完善后有助于促进交流</string>
    <string name="user_profile_personal_signature">有什么想说给附近的朋友听？</string>
    <string name="user_profile_bind">已绑定</string>
    <string name="user_profile_unbind">未绑定</string>
    <string name="user_profile_unsynsina">未开启好友推荐</string>
    <string name="user_profile_synsina">已开启好友推荐</string>
    <string name="user_profile_unsynphone">未开启通讯录</string>
    <string name="user_profile_synphone">已开启通讯录</string>
    <string name="publish_feed">留言</string>
    <string name="publish_feed_defaultsite_string">选择地点</string>
    <string name="publish_feed_hidden_tip">提示：隐身时发布的留言依然会显示距离</string>
    <string name="search_site">搜索地点</string>
    <string name="people">个人</string>
    <string name="group">群组</string>
    <string name="nearby_player">附近的玩家</string>
    <string name="nearby_filter">筛选</string>
    <string name="nearby_filter_m">筛选(男)</string>
    <string name="nearby_filter_f">筛选(女)</string>
    <string name="nearby_ffilter_dlg_title">筛选距离</string>
    <string name="nearby_feed_board">留言板</string>
    <string name="nearbysites_visitcount">%1$s人近期到访</string>
    <string name="nearbysites_feedempty">近期无人到访</string>
    <string name="msg_notnews">暂无新消息</string>
    <string name="msg_status_readed">已读</string>
    <string name="msg_status_cloud">同步</string>
    <string name="msg_status_failed">失败</string>
    <string name="msg_status_sending">发送</string>
    <string name="msg_status_uploading">上传</string>
    <string name="msg_status_positioning">定位</string>
    <string name="msg_status_sended">送达</string>
    <string name="message_plugs_sendpicture">发送图片</string>
    <string name="message_plugs_sendlocation">发送位置</string>
    <string name="message_plugs_camera">拍摄照片</string>
    <string name="message_plugs_emote">使用表情</string>
    <string name="message_not_bothfollow">相互关注才能发送语音</string>
    <string name="changepwd_oldpwd_error">旧密码输入错误</string>
    <string name="changepwd_oldpwd_newpwd_equals">新密码与旧密码不可相同</string>
    <string name="emote_type_1">默认</string>
    <string name="emote_type_2">Emoji</string>
    <string name="emote_type_3">表情商店</string>
    <string name="setpwd_confim">重复输入新密码</string>
    <string name="setpwd_new">输入新密码</string>
    <string name="setpwd_old">输入旧密码</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="tips_feed">动态消息太多，可设置不提醒的消息类型</string>
    <string name="tips_nearbypeople">当前定位不精准，可能不断偏移，点此了解</string>
    <string name="tips_hi">陌生人招呼过多，可设置不提醒或隐身</string>
    <string name="tips_group">群聊消息过多时可设置无声模式</string>
    <string name="foundgroup_step1_string1">当前只有以下用户可以创建群组:</string>
    <string name="foundgroup_step1_string4">个人资料完善</string>
    <string name="foundgroup_step1_string5">你还可以创建%1$s个群组，当前已创建%2$s个。</string>
    <string name="group_profile_bottom_string1">进入群聊</string>
    <string name="group_profile_bottom_string2">申请加入</string>
    <string name="group_profile_bottom_string5">撤销申请</string>
    <string name="edit_grouplocation_string1">创建群组时的位置</string>
    <string name="edit_grouplocation_string2">你当前位置将作为群组的位置。若群名称和主题与当前位置不符，可能无法通过申请。</string>
    <string name="edit_grouplocation_string3">使用我的当前位置</string>
    <string name="pnumber_check_mailbox_hint1">请输入要绑定的邮箱</string>
    <string name="pnumber_check_mailbox_hint2">请输入陌陌密码</string>
    <string name="editsite_sitename0">全部</string>
    <string name="editsite_sitename1">小区</string>
    <string name="editsite_sitename2">商用楼</string>
    <string name="editsite_sitename3">学校</string>
    <string name="editsite_sitename4">休闲</string>
    <string name="editsite_sitename5">餐馆</string>
    <string name="editsite_sitename6">交通</string>
    <string name="createsite_title1">地点名称</string>
    <string name="createsite_title2">地点类型</string>
    <string name="createsite_title3">请选择地点类型</string>
    <string name="createsite_hint">请输入地点名称</string>
    <string name="createsite_titlecontent4">创建地点需要人工审核，审核通过后会由系统通知。只能创建两公里内的地点。</string>
    <string name="googlemapkey">0yHjhNLbPFJEKp5sGSSFVdc6IClfVyi6H8qoY7w</string>
</resources>