<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/root_layout" android:background="@color/background_normal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/include_header" />
    <ScrollView android:id="@id/scrollview_content" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/profile_layout_bottom" android:layout_below="@id/layout_header" style="@style/Style_Scrollable">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/profile_layout_acount_info" style="@style/Style_Patterns">
                <TextView android:textColor="@color/text_title" android:id="@id/textview_aocuntinfo_title" android:paddingLeft="0.0dip" android:text="@string/createsite_title1" style="@style/Style_Patterns_SectionBar" />
                <EditText android:gravity="top|left|center" android:id="@id/et_sitename" android:background="@drawable/edittext_default" android:padding="10.0dip" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:hint="@string/createsite_hint" android:singleLine="true" />
                <RelativeLayout android:id="@id/layout_sitetype" android:background="@drawable/bglistitem_selector_user" style="@style/Style_Patterns_Content">
                    <TextView android:id="@id/textviewmomotitle" android:text="@string/createsite_title2" style="@style/Patterns_Text_Left" />
                    <ImageView android:id="@id/iv_arrow1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_common_arrow_right" style="@style/Item_Right" />
                    <com.immomo.momo.android.view.HandyTextView android:textSize="18.0sp" android:textColor="@color/text_content" android:id="@id/tv_sitetypename" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/createsite_title3" android:layout_toLeftOf="@id/iv_arrow1" android:layout_centerVertical="true" />
                </RelativeLayout>
                <include layout="@layout/include_patterns_divideline" />
                <com.immomo.momo.android.view.HandyTextView android:textSize="14.0sp" android:textColor="@color/text_content" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/createsite_titlecontent4" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ImageView android:id="@id/layout_shadow" android:background="@drawable/bg_topbar_shadow" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layout_header" />
</RelativeLayout>
