<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/rg_rootLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/Style_Scrollable">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.immomo.momo.android.view.HandyTextView android:textSize="18.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/foundgroup_step1_string1" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="100.0dip" />
            <com.immomo.momo.android.view.HandyTextView android:textSize="18.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/foundgroup_step1_string4" />
            <com.immomo.momo.android.view.HandyTextView android:textSize="18.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/foundgroup_step1_string5" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
