<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background_normal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/include_header" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/layout_header">
        <EditText android:id="@id/et_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:hint="@string/pnumber_check_mailbox_hint1" android:singleLine="true" android:inputType="textEmailAddress" android:imeOptions="actionNext" style="@style/EditTextStyle" />
        <EditText android:id="@id/et_pwd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:hint="@string/pnumber_check_mailbox_hint2" android:singleLine="true" android:inputType="textPassword" android:imeOptions="actionNext" style="@style/EditTextStyle" />
        <Button android:id="@id/send_button" android:layout_width="fill_parent" android:text="发送验证邮件" android:layout_centerInParent="true" style="@style/Style_SubmitButton" />
        <com.immomo.momo.android.view.HandyTextView android:textSize="14.0sp" android:textColor="@color/text_content" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/user_profile_edit_checkemail_tip" />
    </LinearLayout>
    <ImageView android:id="@id/layout_shadow" android:background="@drawable/bg_topbar_shadow" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layout_header" />
</RelativeLayout>
