<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/RootView" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <RelativeLayout android:gravity="center" android:id="@id/layout_type_all" android:background="@drawable/bg_dialog_selectsitetype" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_sitetype_1" />
                    </RelativeLayout>
                    <TextView android:text="@string/editsite_sitename0" style="@style/SelectSiteTypeDialog_TextStyle" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <RelativeLayout android:gravity="center" android:id="@id/layout_type_department" android:background="@drawable/bg_dialog_selectsitetype" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_sitetype_1" />
                    </RelativeLayout>
                    <TextView android:text="@string/editsite_sitename1" style="@style/SelectSiteTypeDialog_TextStyle" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <RelativeLayout android:gravity="center" android:id="@id/layout_type_office" android:background="@drawable/bg_dialog_selectsitetype" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_sitetype_2" />
                    </RelativeLayout>
                    <TextView android:text="@string/editsite_sitename2" style="@style/SelectSiteTypeDialog_TextStyle" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <RelativeLayout android:gravity="center" android:id="@id/layout_type_school" android:background="@drawable/bg_dialog_selectsitetype" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_sitetype_3" />
                    </RelativeLayout>
                    <TextView android:text="@string/editsite_sitename3" style="@style/SelectSiteTypeDialog_TextStyle" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <RelativeLayout android:gravity="center" android:id="@id/layout_type_entertainment" android:background="@drawable/bg_dialog_selectsitetype" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_sitetype_4" />
                    </RelativeLayout>
                    <TextView android:text="@string/editsite_sitename4" style="@style/SelectSiteTypeDialog_TextStyle" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <RelativeLayout android:gravity="center" android:id="@id/layout_type_restaurant" android:background="@drawable/bg_dialog_selectsitetype" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_sitetype_4" />
                    </RelativeLayout>
                    <TextView android:text="@string/editsite_sitename5" style="@style/SelectSiteTypeDialog_TextStyle" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <RelativeLayout android:gravity="center" android:id="@id/layout_type_trafic" android:background="@drawable/bg_dialog_selectsitetype" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_sitetype_6" />
                    </RelativeLayout>
                    <TextView android:text="@string/editsite_sitename6" style="@style/SelectSiteTypeDialog_TextStyle" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
